qtcreator (4.6.1-1) UNRELEASED; urgency=medium

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * New upstream release.
  * Make qtcreator suggest valgrind (Closes: #881542).
  * Backport upstream patch to improve AppStrem metadata (Closes: 897901).

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 04 May 2018 11:16:32 -0300

qtcreator (4.6.0-3) unstable; urgency=medium

  * Fix clang model plugin build (Closes: 895677):
    - Build depend upon llvm-6.0-dev on all archs.
    - Once again pass LLVM_INSTALL_DIR to the config script. In Debian
      llvm-config is suffixed by the LLVM version, so the correct path
      is not detected without it.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Wed, 18 Apr 2018 15:08:16 -0300

qtcreator (4.6.0-2) unstable; urgency=medium

  * Qt Creator now has a better heuristic for detecting LLVM, so it's not
    needed to explicitely tell it where is it installed. Thanks James Cowgill
    for pointing me in the right direction.
    - Make libclang-6.0-dev a dependency on all archs.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Tue, 10 Apr 2018 21:18:30 -0300

qtcreator (4.6.0-1) unstable; urgency=medium

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Use Helmut Grohne's patch to simplify debian/rules and allow qtcreator to
    be crossbuilt (Closes: #893508).

  [ Simon Quigley ]
  * New upstream release.
  * Run wrap-and-sort.
  * Confirm the multi-arch hinter's pointers and make qtcreator-data and
    qtcreator-doc Multi-Arch: foreign.
  * Bump Standards-version to 4.1.4, no changes needed.

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Bump qbs build dependency to 1.11, required by this release.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Tue, 10 Apr 2018 10:28:29 -0300

qtcreator (4.5.2-3) unstable; urgency=medium

  * Update libclang dependency to 6.0 (closes: #893402)

 -- Adam Majer <adamm@zombino.com>  Sun, 18 Mar 2018 19:10:54 +0100
